--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     </head>
     <!--las etiqueta de titulo hi - h6-->
     <body>
+
+
         <h1>
             mi primera pagina web
         </h1>
+        <a href="./semana1/input.html">inputs</a>
         <h2>titulo 2</h2>
         <h3>titulo 3</h3>
         <h4>titulo 4</h4>
