--- a/semana1/input.html
+++ b/semana1/input.html
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+      <h1>Formularios</h1>
+
+    <a href="./semana1/form.html">Link a formularios</a>
     <h1>tipos de inputs</h1>
 
     <!--inputs: es una caja que puede ser texto/numeros/
