--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
-<html>
-    <head>
-        <title>
-            codigo front 13
-        </title>
+<meta charset="utf-8" />
+<meta
+  name="description"
+  content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+/>
+<meta name="robots" content="" />
+<meta name="googlebot" content="" />
+<meta name="keywords" content="kjarisalfaro, HTML, CSS, JS, CODIGO" />
+<title>Codigo Front 13</title>
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@linder3hs" />
+<meta name="twitter:title" content="Mi pagina web" />
+<meta
+  name="twitter:description"
+  content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+/>
+<meta
+  name="twitter:image"
+  content="https://media-exp1.licdn.com/dms/image/C4E1BAQEfNIXEf_JoKg/company-background_10000/0?e=2159024400&v=beta&t=PhtZQJ8QA5Wy2lQzlfJL166pSeK_i3q2qfkD-xOMCcc"
+/>
     </head>
     <!--las etiqueta de titulo hi - h6-->
     <body>
 
 
-        <h1>
-            mi primera pagina web
-        </h1>
+        <h1>input</h1>
         <a href="./semana1/input.html">inputs</a>
+        <h1>tablas</h1>
+        <a href="./semana1/tablas.html">tablas</a>
+        <h1>tablas</h1>
+        <a href="./semana1/form.html">form</a>
+        <h1>titulo 1</h1>
         <h2>titulo 2</h2>
         <h3>titulo 3</h3>
         <h4>titulo 4</h4>
